Succesfully added a new background :) look pretty sweet

--- a/css/style.css
+++ b/css/style.css
@@ -1086,7 +1086,7 @@
 /*********************************************************************************/
 
 	#intro {
-		background: url('images/overlay.png'), url('../images/introa.jpg');
+		background: url('images/overlay.png'), url('../images/intro.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
