Added some social media icons onto the home section

--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@
     background-image: url('path/to/image.png');
     position: relative;
     top:80%;
-    left:38%;
+    left:35%;
     text-align: center;
     height: 48px;
     width: 48px;
@@ -659,6 +659,10 @@
 }
 .stumbleupon-hover {
     background-image: url('images/stumbleupon-hover.png');
+}
+
+.hawklink-hover {
+    background-image: url('images/hawklink-hover.png');
 }
 
 
