--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -13,13 +13,13 @@
     background-position: center center;
 }
 .slide1 {
-    background-image: url(http://placekitten.com/1000/300);
+    background-image: url(http://mypages.iit.edu/~climbing/images/home/redrocks-home.png);
 }
 .slide2 {
-    background-image: url(http://placekitten.com/1100/300);
+    background-image: url(http://mypages.iit.edu/~climbing/images/home/redrocks-home2.png);
 }
 .slide3 {
-    background-image: url(http://placekitten.com/1200/300);
+    background-image: url(http://mypages.iit.edu/~climbing/images/home/ice-home.png);
 }
 /* Carousel Fade Effect */
 .carousel.carousel-fade .item {
@@ -46,3 +46,236 @@
     right: 0;
     left: 0;
 }
+
+
+
+/*********************************************************************************/
+/* Social media Icons                                                            */
+/* http://bradsknutson.com/blog/css3-rollover-social-media-icons/                */
+/* Licensed under the SIL OFL 1.1 (font), MIT (CSS)                              */
+/*********************************************************************************/
+
+
+.social-slide {
+    background-image: url('path/to/image.png');
+    position: relative;
+    top:80%;
+    left:35%;
+    text-align: center;
+    height: 48px;
+    width: 48px;
+    margin: 10px;
+    float: left;
+    -webkit-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+    transition: all ease 0.3s;
+}
+.social-slide:hover {
+    background-position: 0px -48px;
+    box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
+}
+
+
+.social-slide:hover {
+    background-position: 0px -48px;
+    box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
+}
+.twitter-hover {
+    background-image: url('images/twitter-hover.png');
+}
+.facebook-hover {
+    background-image: url('images/facebook-hover.png');
+}
+.google-hover {
+    background-image: url('images/google-hover.png');
+}
+.pinterest-hover {
+    background-image: url('images/pinterest-hover.png');
+}
+.linkedin-hover {
+    background-image: url('images/linkedin-hover.png');
+}
+.tumblr-hover {
+    background-image: url('images/tumblr-hover.png');
+}
+.reddit-hover {
+    background-image: url('images/reddit-hover.png');
+}
+.instagram-hover {
+    background-image: url('images/instagram-hover.png');
+}
+.stumbleupon-hover {
+    background-image: url('images/stumbleupon-hover.png');
+}
+
+.hawklink-hover {
+    background-image: url('images/hawklink-hover.png');
+}
+
+
+div.centre
+{
+    width: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* uses font awesome for social icons */
+@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+
+.page-header{
+    text-align: center;
+}
+
+/*social buttons*/
+.btn-social{
+    color: white;
+    opacity:0.9;
+}
+.btn-social:hover {
+    color: white;
+    opacity:1;
+}
+.btn-facebook {
+    background-color: #3b5998;
+    opacity:0.9;
+}
+.btn-twitter {
+    background-color: #00aced;
+    opacity:0.9;
+}
+.btn-linkedin {
+    background-color:#0e76a8;
+    opacity:0.9;
+}
+.btn-github{
+    background-color:#000000;
+    opacity:0.9;
+}
+.btn-google {
+    background-color: #c32f10;
+    opacity: 0.9;
+}
+.btn-stackoverflow{
+    background-color: #D38B28;
+    opacity: 0.9;
+}
+
+/* resume stuff */
+
+.bs-callout {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    border-color: #eee;
+    border-image: none;
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px 1px 1px 5px;
+    margin-bottom: 5px;
+    padding: 20px;
+}
+.bs-callout:last-child {
+    margin-bottom: 0px;
+}
+.bs-callout h4 {
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+.bs-callout-danger {
+    border-left-color: #d9534f;
+}
+
+.bs-callout-danger h4{
+    color: #d9534f;
+}
+
+.resume .list-group-item:first-child, .resume .list-group-item:last-child{
+    border-radius:0;
+}
+
+/*makes an anchor inactive(not clickable)*/
+.inactive-link {
+    pointer-events: none;
+    cursor: default;
+}
+
+.resume-heading .social-btns{
+    margin-top:15px;
+}
+.resume-heading .social-btns i.fa{
+    margin-left:-5px;
+}
+
+
+
+@media (max-width: 992px) {
+    .resume-heading .social-btn-holder{
+        padding:5px;
+    }
+}
+
+
+/* skill meter in resume. copy pasted from http://bootsnipp.com/snippets/featured/progress-bar-meter */
+
+.progress-bar {
+    text-align: left;
+    white-space: nowrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+
+.progress-bar > .progress-type {
+    padding-left: 10px;
+}
+
+.progress-meter {
+    min-height: 15px;
+    border-bottom: 2px solid rgb(160, 160, 160);
+    margin-bottom: 15px;
+}
+
+.progress-meter > .meter {
+    position: relative;
+    float: left;
+    min-height: 15px;
+    border-width: 0px;
+    border-style: solid;
+    border-color: rgb(160, 160, 160);
+}
+
+.progress-meter > .meter-left {
+    border-left-width: 2px;
+}
+
+.progress-meter > .meter-right {
+    float: right;
+    border-right-width: 2px;
+}
+
+.progress-meter > .meter-right:last-child {
+    border-left-width: 2px;
+}
+
+.progress-meter > .meter > .meter-text {
+    position: absolute;
+    display: inline-block;
+    bottom: -20px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 0.85em;
+    color: rgb(160, 160, 160);
+    text-align: left;
+}
+
+.progress-meter > .meter.meter-right > .meter-text {
+    text-align: right;
+}
+
